--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ and open the template in the editor.
                     </div>
 
                     <div class="st">
-                        <img src="images/venom2.jpg" alt="">
+                        <img src="venom2.jpg" alt="">
                     </div>
 
                     <div class="st">
