--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ and open the template in the editor.
 
         
         <!--<div class="slide">
-                <img class="mySlides" src="images/venom2.jpg">
+                <img class="mySlides" src="venom2.jpg">
                 <img class="mySlides" src="images/pushpa.jpg">
                 <img class="mySlides" src="images/83.jpg">
 
