--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ and open the template in the editor.
                     <img "class="mySlides" src="images/8.jpg" style="width: 200px; height: 300px;" alt="">
                     </a>
                     <a href="#">
-                    <img "class="mySlides" src="images/v2.jpg" style="width: 200px; height: 300px;" alt="">
+                    <img "class="mySlides" src="venom2.jpg" style="width: 200px; height: 300px;" alt="">
                     </a>
                     <a href="#">
                     <img "class="mySlides" src="images/d.jpeg" style="width: 200px; height: 300px;" alt="">
