--- a/homepage.html
+++ b/homepage.html
@@ -319,7 +319,7 @@ and open the template in the editor.
             <a href="#">Clients</a>
             <a href="#">Contact</a>
         </div>
-        <div class="title">MovieWorld</div>
+        <div class="title">Movie</div>
         <div class="navbar">
             <nav>
                 <ul class="nav-items">
