--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ and open the template in the editor.
         <div class="title">MovieWorld</div>
         <div class="center">
         <h1>Login</h1>
-            <form action="loginprocess.php" method="post">
+            <form action="homepage.html" method="post">
                     <div class="txt_field">
                       <input type="text" name="Lusername"required>
                       <span></span>
